   * "names_etc.xml" renamed to "names.xml" + local dictionaries
     now has a "blacklist" - thx ivandrofly
   * Some position support for WebVTT
   * In "Change casing" it's now possible to add extra names
   * Export image margins are now percentage - thx aaaxx/gorgorias
   * Added "Clear shortcut" button to settings - thx Simon
   * "Import plain text" now rembembers options - thx Leon
* FIXED:
   * Fixed crash in "Add to user dictionary" in OCR - thx alfix0
   * Fixed original file name bug in "Undo" - thx darnn
   * Fixed non default timecode scales in MKV - thx mkver
   * Fix layout of translator mode in RTL mode - thx darnn
   * Fixed possible crash in "CleanAutoBackupFolder" - thx kaser2010
   * Fix missing UTF-8 tag in OCR HTML export - thx dgonyier
   * Fixed issue regarding "Fix dialogs on one line" - thx ingo
   * Fixed possible crash in EBU STL - thx Elena
   * Video player "Stop" resets playback position - thx askolesov/pavel-belenko
   * Many fixes for TTML 1.0 and Netflix Timed Text - thx askolesov/pavel-belenko
   * Fixed locking of input subtitle file (for unknown subtitles) - thx darnn
   * Fixed crash after unsuccessful load of subtitle file - thx darnn
   * Fixed possible crash in "Batch convert" - thx FreezinG117
   * Fixed issue with the German open quotation mark - thx Ninelpienel
   * Fixed bug in "Reverse RTL start/end" - thx darnn
   * Fixed "FCP + image" export for drop frame rates - thx chris
   * Fixed finding Tesseract traineddata files on Linux - thx mooop12
   * Fixed loading of "mks" files from cmd line - thx Charles
   * Fixed auto-backup for "EBU STL" format - thx Mirka
   * Fixed new ASS/SSA style with space in name - thx hello_hello
   * Fixed issue with empty time code in format "TT draft 2006-10" - thx Georg-J
   * Fixed styling inside "span" in format TTML - thx Johan
   * Fixed hashtag character in "PAC" format - thx Nuri


3.5.2 (3rd March 2017)
* NEW:
   * Added optional list view columns "chars/sec" + "words/min"