@@ -2658,6 +2658,7 @@ Keep changes?",
                 AddSceneChange = "Add scene change",
                 RemoveSceneChange = "Remove scene change",
                 SeekSilence = "Seek silence...",
+                InsertSubtitleHere = "Insert subtitle here...",
                 GuessTimeCodes = "Guess time codes...",
                 CharsSecX = "CPS: {0:0.00}",
                 WordsMinX = "WPM: {0:0.00}",
