@@ -2540,6 +2540,7 @@
             public string RemoveSceneChange { get; set; }
             public string GuessTimeCodes { get; set; }
             public string SeekSilence { get; set; }
+            public string InsertSubtitleHere { get; set; }
             public string CharsSecX { get; set; }
             public string WordsMinX { get; set; }
         }
